--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 		<h2>San Joaquin Valley Town Hall</h2>
 		<h3>Celebrating our <span class="shadow">75<sup>th</span> Year</h3>
 	</header>
+	<nav id = "nav_menu">
+		<u1>
+			<li><a href="index.html" class="current">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheone.html">Luncheons</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
+			<li><a href="aboutus.html">About Us</a>
+				<u1>
+					<li<a href="a">Our History</a></li>
+					<li<a href="a">Board of Directors</a></li>
+					<li<a href="a">Past Speakers</a></li>
+					<li<a href="a">Contact Information</a></li>
+				</u1>
+			</li>
+		</u1>
+	</nav>
 	<main>
 		<section>
 		<h2>Our Mission</h2>
@@ -36,7 +52,8 @@
 				<p>What's 75 million years old and brand spanking new? A teenage Utahceratops!
 					Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research
 					has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.</p>
-				<p><a href="speakers/sampson.html">Read more.</a>&nbsp;<b>Or meet us there!</b></p>
+				<p><a href="speakers/sampson.html">Read more.</a>&nbsp;<b>
+					<a href="media/sampson.swf" target="_blank">Or play video.</a></p>
 				
 			</article>
 
