--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					Come to the Saroyan, armed with your best dinosaur roar, when Scott Sampson, Research Curator at the Utah Museum of Natural History, steps to the podium. Sampson's research
 					has focused on the ecology and evolution of late Cretaceous dinosaurs and he has conducted fieldwork in a number of countries in Africa.</p>
 				<p><a href="speakers/sampson.html">Read more.</a>&nbsp;<b>
-					<a href="media/sampson.swf" target="_blank">Or play video.</a></p>
+					<a href="images/sampson.swf" target="_blank">Or play video.</a></p>
 				
 			</article>
 
